--- a/style.css
+++ b/style.css
@@ -1,148 +1,178 @@
+/* -----------------------
+   FONT-FACE DECLARATIONS
+------------------------ */
+
 @font-face {
-    font-family: 'Terminal';
-    src: url('Terminal-Grotesque.woff2') format('woff2'),
-        url('Terminal-Grotesque.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Terminal';
+  src: url('Terminal-Grotesque.woff2') format('woff2'),
+       url('Terminal-Grotesque.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Mess';
-    src: url('Mess-Light.woff2') format('woff2'),
-        url('Mess-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Mess';
+  src: url('Mess-Light.woff2') format('woff2'),
+       url('Mess-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Terminal Open';
-    src: url('TerminalGrotesque-Open.woff2') format('woff2'),
-        url('TerminalGrotesque-Open.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Terminal Open';
+  src: url('TerminalGrotesque-Open.woff2') format('woff2'),
+       url('TerminalGrotesque-Open.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Base';
-    src: url('bianzhidai-Base.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Messier';
-    src: url('bianzhidai-Messier.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Messy';
-    src: url('bianzhidai-Messy.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Base';
+  src: url('bianzhidai-Base.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
+@font-face {
+  font-family: 'Messier';
+  src: url('bianzhidai-Messier.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Messy';
+  src: url('bianzhidai-Messy.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* -----------------------
+   BASE
+------------------------ */
 
 body {
   background-color: white;
 }
-h1.mess {
-  color: #ff0b00;
-    font-size: 128px;
-    margin-top: -150px;
-    margin-left: 200px;
-    margin-bottom: 30px;
-    font-family: 'Mess';
-}
-h1.terminal {
-  color: #ffb0b0;
-    font-size: 128px;
-    margin-top: -180px;
-    margin-left: 200px;
-    margin-bottom: 0;
-    font-family: 'Terminal';
+
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-img.MIRROIR {
-    height: 128px;
-}
-
-h2 {
-  color: black;
-    font-family: 'Terminal';
-    font-size: 52px;
-    background-color: chartreuse
-}
-h3 {
-    color: hotpink;
-    font-family: 'Messy';
-    font-size: 64px;
-    margin-bottom: 0;
-}
-h3:hover {
-    color: black;
-    font-family: 'Messy';
-    font-size: 64px;
-    margin-bottom: 0;
-}
 a {
-    font-family: 'Terminal';
-  color: black;
+  font-family: 'Terminal';
+  text-decoration: none;
+  color: #222;
 }
-/* mouse over link */
+
 a:hover {
   color: hotpink;
 }
+
+/* -----------------------
+   TYPOGRAPHIE STRUCTURE
+------------------------ */
+
+h1.mess {
+  font-family: 'Mess';
+  font-size: 128px;
+  color: #ff0b00;
+  margin: -150px 0 30px 200px;
+}
+
+h1.terminal {
+  font-family: 'Terminal';
+  font-size: 128px;
+  color: #ffb0b0;
+  margin: -180px 0 0 200px;
+}
+
+h2 {
+  font-family: 'Terminal';
+  font-size: 52px;
+  color: black;
+  background-color: chartreuse;
+}
+
+h2:hover {
+  background-color: aqua;
+}
+
+h3 {
+  font-family: 'Messy';
+  font-size: 64px;
+  color: hotpink;
+  margin-bottom: 0;
+}
+
+h3:hover {
+  color: black;
+}
+
+/* -----------------------
+   SPÉCIFIQUE PSEUDO
+------------------------ */
+
+a.Pseudo {
+  font-size: 32px;
+  color: #000000;
+}
+
+a.Pseudo:hover {
+  color: hotpink;
+}
+
+/* -----------------------
+   STRUCTURE & LAYOUT
+------------------------ */
+
 .container {
-    display: flex;
-    justify-content: space;
-    align-items: flex-start;
-    gap: 3rem; /* espace entre les deux colonnes */
-    margin-top: 0;
-    flex-wrap: wrap; /* pour éviter que ça déborde sur petit écran */
+  display: flex;
+  flex-wrap: wrap; /* pour le responsive */
+  align-items: flex-start;
+  gap: 3rem;
+  margin-top: 0;
+   /* corrige "justify-content: space" */
 }
 
 .left {
-    width: 200px;
+  width: 200px;
 }
+
 .right {
-    width: auto; /* ou ajuste à ta convenance */
+  width: auto;
 }
 
-ul {
-    list-style: none;
-    padding: 0;
+/* -----------------------
+   IMAGES
+------------------------ */
+
+img.MIRROIR {
+  height: 128px;
 }
 
-a {
-    text-decoration: none;
-    color: #222;
-}
+/* -----------------------
+   PARAGRAPHES
+------------------------ */
 
 p {
-    font-family: 'terminal';
-    font-size: 128px;
-    margin: 0;
+  font-family: 'Terminal';
+  font-size: 128px;
+  margin: 0;
 }
 
-      video.original-video {
-        display: none;
-      }
-      div.ascii-video {
-        white-space: pre;
-        font-family: monospace;
-        font-size: 9px;
-        line-height: 8px;
-        color: green;
-        margin-left: auto;
-        margin-right: auto;
-        width: auto;
-      }
-      canvas.scaled-video {
-        display: none;
-      }
+p.heure {
+  font-size: 200px;
+}
+
+p:hover {
+  font-family: 'Terminal open';
+    margin: 0;
+}
