--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@
 }
 
 @font-face {
+  font-family: 'pic nic';
+  src: url('PicNic-Regular.woff2') format('woff2'),
+       url('PicNic-Regular.woff') format('woff');
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Terminal Open';
   src: url('TerminalGrotesque-Open.woff2') format('woff2'),
        url('TerminalGrotesque-Open.woff') format('woff');
@@ -108,7 +116,7 @@ h2:hover {
 
 h3 {
   font-family: 'Messy';
-  font-size: 64px;
+  font-size: 2em;
   color: hotpink;
   margin-bottom: 0;
 }
