--- a/style.css
+++ b/style.css
@@ -251,5 +251,50 @@ p:hover {
   font-size: 1em;        /* Taille du texte */
   font-family: 'terminal';
   font-weight: bold;       /* Texte en gras */
-  color: #000000;          /* Couleur du texte *
+  color: #000000;          /* Couleur du texte */
+}
+
+@media screen and (max-width: 768px) {
+  h1.mess {
+    font-size: 64px;
+    margin: 10px;
+  }
+
+  h1.terminal {
+    font-size: 64px;
+    margin-top: -78px;
+    margin-left: 10px;
+  }
+  .container {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .navigation, .Pseudo, .horaire, .rituels {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  p, p.heure {
+    font-size: 2em;
+  }
+
+  a.Pseudo {
+    font-size: 2em;
+    display: block;
+    text-align: center;
+  }
+h2.Pseudo {
+    font-size: 2em;
+    display: block;
+  }
+  img.rituels {
+    width: 100%;
+    height: auto;
+  }
+
+  ul {
+    padding-left: 0;
+  }
 }
