--- a/style.css
+++ b/style.css
@@ -106,21 +106,22 @@ a:hover {
    TYPOGRAPHIE STRUCTURE
 ------------------------ */
 
-    h1.mess {
-      font-family: 'Mess', monospace; /* tu peux modifier selon ta police */
-      font-size: 128px;
-      color: #ff0b00;
-      margin: -150px 0 30px 200px;
-      transition: opacity 0.5s ease;
-    }
+h1.mess {
+  font-family: 'Mess'; /* tu peux modifier selon ta police */
+  font-size: 128px;
+  color: #ff0b00;
+  margin: -150px 0 30px 200px;
+  transition: opacity 0.5s ease;
 
-    .fade-out {
-      opacity: 0;
-    }
+}
 
-    .fade-in {
-      opacity: 1;
-    }
+.fade-out {
+  opacity: 0;
+}
+
+.fade-in {
+  opacity: 1;
+}
 
 h1.terminal {
   font-family: 'Terminal';
@@ -253,33 +254,6 @@ p:hover {
   font-weight: bold;       /* Texte en gras */
   color: #000000;          /* Couleur du texte */
 }
-
-#ascii-webcam-widget {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #ffffff;
-  border: 2px solid hotpink;
-  padding: 4px;
-  z-index: 9999;
-  font-family: monospace;
-  font-size: 6px;
-  color: hotpink;
-  width: fit-content;
-  height: fit-content;
-}
-
-#ascii-webcam-widget video,
-#ascii-webcam-widget canvas {
-  display: none;
-}
-
-#ascii-webcam-widget pre {
-  margin: 0;
-  white-space: pre;
-  line-height: 6px;
-}
-
 
 
 @media screen and (max-width: 768px) {
