--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ body.afternoon img:hover { background-color: hotpink; }
 body.afternoon p:hover { color: aliceblue; background-color: black;}
 body.afternoon .ip-text { color: #000000; }
 
-
 /* 🌇 EVENING */
 body.evening {
   background-color: #1904ff;
@@ -161,7 +160,6 @@ body.night #clock { color: #ff00ea; }
 body.night img:hover { background-color: chartreuse; }
 body.night p:hover { color: aliceblue; background-color: black;}
 body.night .ip-text { color: #000000; }
-
 /* -----------------------
    BASE & STRUCTURE COMMUNE
 ------------------------ */
@@ -208,6 +206,37 @@ p:hover {
   font-family: 'terminal';
   font-weight: bold;
 }
+
+.bordereau {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+
+  border-top: 4px solid #00ff77;
+  border-bottom: 4px solid #00ff77;
+  padding: 10px 0;
+  margin-top: 30px;
+  position: relative;
+}
+
+.scroll-text {
+  display: inline-block;
+  font-family: 'Terminal';
+  font-size: 1.5em;
+  color: #00ff77;
+  padding-left: 100%;
+  animation: scroll-left 15s linear infinite;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-150%);
+  }
+}
+
 
 /* -----------------------
    TYPOGRAPHIE STRUCTURE
